--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-fetch": "^2.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "resend": "^6.4.2"
+    "resend": "^6.4.2",
+    "solapi": "^5.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
