--- a/netlify.toml
+++ b/netlify.toml
@@ -26,6 +26,10 @@
 [functions]
   node_bundler = "esbuild"
 
+# check-ip (환경변수 없음)
+[functions."check-ip"]
+  included_files = []
+
 # 정산 자동 마감 - 매시간 실행
 [functions."settlement-auto-close"]
   schedule = "@hourly"
